fix overflow

--- a/src/styles/ActionButtonGroup.css
+++ b/src/styles/ActionButtonGroup.css
@@ -1,6 +1,6 @@
 .buttons-group {
-  margin-right: 20%;
   display: flex;
   flex-direction: column;
-  margin-top: 3%;
+  margin: 3% auto;
+  flex-basis: 20%;
 }
