--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,18 +1,20 @@
 .app {
-  min-height: 100vh;
-  margin: 0;
-  background-repeat: no-repeat;
-  background-size: 150vh auto;
-  background-position: center;
-  overflow: hidden;
-  
+  height: 100vh;
+  width: 100%;
 
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  position: absolute;
+  overflow: hidden;
 }
 
-.items {
+.content {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
   margin-right: 3%;
   margin-left: auto;
-  overflow: hidden;
+  position: absolute;
 }
