--- a/src/styles/Inventory.css
+++ b/src/styles/Inventory.css
@@ -2,15 +2,15 @@
   color: white;
   text-align: left;
   border: 1.7px dashed white;
-  padding-right: 10px;
-  height: 100px;
-  width: 300px;
+  width: 10%;
   margin: 3%;
   /* text-shadow: 2px 2px 4px #000000; */
   -webkit-text-stroke-width: 0.3px;
   -webkit-text-stroke-color: white;
   text-shadow: 4px 4px 0px #000000, 1px 1px 5px #000000, 1px 1px 5px #000000, 1px 1px 5px #000000;
   box-shadow: 4px 4px 0px #000000, 1px 1px 5px #000000, 1px 1px 5px #000000, 1px 1px 5px #000000;
+  align-self: flex-start;
+  flex-basis: 10%;
 }
 
 .invent-items{
